kubernetes/minikube/files/prometheus-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-np
  labels:
    managed-by: setup-cluster.sh
spec:
  podSelector:
    matchLabels:
      app: prometheus
  policyTypes: [Ingress, Egress]

  ingress:
    # Allow Grafana to read data from Prometheus
    - from:
        - podSelector:
            matchLabels:
              app: grafana
      ports:
        - port: 80

  egress:
    # Allow Prometheus (and other components, such as kube-state-metrics) to
    # query the Kubernetes API
    - ports:
        - port: 8443
        - port: 443
