kubernetes/minikube/files/promtail-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: promtail-np
  labels:
    managed-by: setup-cluster.sh
spec:
  podSelector:
    matchLabels:
      app: promtail
  policyTypes: [Ingress, Egress]

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - port: 3101

  egress:
    - ports:
        - port: 8443  # Allow promtail to query the Kubernetes API
